Tidy internals, use cls.getDeclaredConstructor().newInstance();